--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ Practica2/MIPSModelsim/BasicMIPSProcessorM/work
 Practica2/MIPSModelsim/BasicMIPSProcessorM/ALUResult.dat
 Practica2/MIPSModelsim/BasicMIPSProcessorM/data.dat
 Practica2/MIPSModelsim/BasicMIPSProcessorM/wave.do
+Practica2/MIPSModelsim/BasicMIPSProcessorM/sim.do
 Practica2/MIPSModelsim/BasicMIPSProcessorM/text.dat
 *.cr.mti
 *.mpf
@@ -30,3 +31,4 @@ Practica2/MIPSModelsim/BasicMIPSProcessorM/text.dat
 *.wlf
 wlft*
 *.v.bak
+*.do.bak
