--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,12 @@
 
 # ModelSIM and Quartus files
 Practica2/MIPSQuartusII/*
-Practica2/MIPSModelsim/BasicMIPSProcessorM/work
-Practica2/MIPSModelsim/BasicMIPSProcessorM/ALUResult.dat
-Practica2/MIPSModelsim/BasicMIPSProcessorM/data.dat
-Practica2/MIPSModelsim/BasicMIPSProcessorM/wave.do
-Practica2/MIPSModelsim/BasicMIPSProcessorM/sim.do
-Practica2/MIPSModelsim/BasicMIPSProcessorM/text.dat
+Practica2/MIPSModelsim/work/*
+Practica2/MIPSModelsim/ALUResult.dat
+Practica2/MIPSModelsim/data.dat
+Practica2/MIPSModelsim/wave.do
+Practica2/MIPSModelsim/sim.do
+Practica2/MIPSModelsim/text.dat
 *.cr.mti
 *.mpf
 *.vcd
