--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,12 @@ Practica2/MIPSModelsim/ALUResult.dat
 Practica2/MIPSModelsim/wave.do
 Practica2/MIPSModelsim/sim.do
 Practica3/MIPSQuartusII/*
+Practica3/MIPSQuartus/*
 Practica3/MIPSModelsim/work/*
 Practica3/MIPSModelsim/ALUResult.dat
 Practica3/MIPSModelsim/wave.do
 Practica3/MIPSModelsim/sim.do
+Practica3/MIPSModelsim/Mars4_4.jar
 *.cr.mti
 *.mpf
 *.vcd
